// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/sidebar/sidebar_category should match snapshot 1`] = `
<div>
  <div
    data-rfd-droppable-context-id=":r0:"
    data-rfd-droppable-id="sidebar-categories"
  >
    <div
      class="SidebarChannelGroup a11y__section"
      data-rfd-draggable-context-id=":r0:"
      data-rfd-draggable-id="category1"
    >
      <div
        class=""
        data-rfd-droppable-context-id=":r0:"
        data-rfd-droppable-id="category1"
      >
        <div
          class="SidebarChannelGroupHeader"
        >
          <button
            aria-expanded="true"
            aria-label="custom_category_1"
            class="SidebarChannelGroupHeader_groupButton"
          >
            <i
              class="icon icon-chevron-down"
            />
            <div
              aria-describedby="rfd-hidden-text-:r0:-hidden-text-:r1:"
              class="SidebarChannelGroupHeader_text"
              data-rfd-drag-handle-context-id=":r0:"
              data-rfd-drag-handle-draggable-id="category1"
              draggable="false"
              tabindex="-1"
            >
              custom_category_1
            </div>
          </button>
          <div
            id="mock-category-menu"
          />
        </div>
        <div
          class="SidebarChannelGroup_content"
        >
          <ul
            class="NavGroupContent"
          >
            <li
              id="mock-sidebar-channel"
            />
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/sidebar/sidebar_category should match snapshot when collapsed 1`] = `
<div>
  <div
    data-rfd-droppable-context-id=":rb:"
    data-rfd-droppable-id="sidebar-categories"
  >
    <div
      class="SidebarChannelGroup a11y__section isCollapsed"
      data-rfd-draggable-context-id=":rb:"
      data-rfd-draggable-id="category1"
    >
      <div
        class=""
        data-rfd-droppable-context-id=":rb:"
        data-rfd-droppable-id="category1"
      >
        <div
          class="SidebarChannelGroupHeader"
        >
          <button
            aria-expanded="false"
            aria-label="custom_category_1"
            class="SidebarChannelGroupHeader_groupButton"
          >
            <i
              class="icon icon-chevron-down icon-rotate-minus-90"
            />
            <div
              aria-describedby="rfd-hidden-text-:rb:-hidden-text-:rc:"
              class="SidebarChannelGroupHeader_text"
              data-rfd-drag-handle-context-id=":rb:"
              data-rfd-drag-handle-draggable-id="category1"
              draggable="false"
              tabindex="-1"
            >
              custom_category_1
            </div>
          </button>
          <div
            id="mock-category-menu"
          />
        </div>
        <div
          class="SidebarChannelGroup_content"
        >
          <ul
            class="NavGroupContent"
          >
            <li
              id="mock-sidebar-channel"
            />
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/sidebar/sidebar_category should match snapshot when isNewCategory 1`] = `
<div>
  <div
    data-rfd-droppable-context-id=":r5:"
    data-rfd-droppable-id="sidebar-categories"
  >
    <div
      class="SidebarChannelGroup a11y__section"
      data-rfd-draggable-context-id=":r5:"
      data-rfd-draggable-id="category1"
    >
      <div
        class=""
        data-rfd-droppable-context-id=":r5:"
        data-rfd-droppable-id="category1"
      >
        <div
          class="SidebarChannelGroupHeader"
        >
          <button
            aria-expanded="true"
            aria-label="custom_category_1"
            class="SidebarChannelGroupHeader_groupButton"
          >
            <i
              class="icon icon-chevron-down"
            />
            <div
              aria-describedby="rfd-hidden-text-:r5:-hidden-text-:r6:"
              class="SidebarChannelGroupHeader_text"
              data-rfd-drag-handle-context-id=":r5:"
              data-rfd-drag-handle-draggable-id="category1"
              draggable="false"
              tabindex="-1"
            >
              custom_category_1
            </div>
          </button>
          <div
            class="SidebarCategory_newLabel"
          >
            new
          </div>
          <div
            id="mock-category-menu"
          />
        </div>
        <div
          class="SidebarChannelGroup_content"
        >
          <ul
            class="NavGroupContent"
          >
            <li
              class="SidebarChannel noFloat newChannelSpacer"
              data-rfd-draggable-context-id=":r5:"
              data-rfd-draggable-id="NEW_CHANNEL_SPACER__category1"
              draggable="false"
              tabindex="-1"
            />
            <div
              class="SidebarCategory_newDropBox"
            >
              <div
                class="SidebarCategory_newDropBox-content"
              >
                <i
                  class="icon-hand-right"
                />
                <span
                  class="SidebarCategory_newDropBox-label"
                >
                  Drag channels here...
                </span>
              </div>
            </div>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/sidebar/sidebar_category should match snapshot when sorting is set to by recency 1`] = `
<div>
  <div
    data-rfd-droppable-context-id=":rq:"
    data-rfd-droppable-id="sidebar-categories"
  >
    <div
      class="SidebarChannelGroup a11y__section"
      data-rfd-draggable-context-id=":rq:"
      data-rfd-draggable-id="category1"
    >
      <div
        class=""
        data-rfd-droppable-context-id=":rq:"
        data-rfd-droppable-id="category1"
      >
        <div
          class="SidebarChannelGroupHeader"
        >
          <button
            aria-expanded="true"
            aria-label="DIRECT MESSAGES"
            class="SidebarChannelGroupHeader_groupButton"
          >
            <i
              class="icon icon-chevron-down"
            />
            <div
              aria-describedby="rfd-hidden-text-:rq:-hidden-text-:rr:"
              class="SidebarChannelGroupHeader_text"
              data-rfd-drag-handle-context-id=":rq:"
              data-rfd-drag-handle-draggable-id="category1"
              draggable="false"
              tabindex="-1"
            >
              DIRECT MESSAGES
            </div>
          </button>
          <div
            id="mock-sorting-menu"
          />
          <button
            aria-label="Write a direct message"
            class="SidebarChannelGroupHeader_addButton"
            id="newDirectMessageButton"
          >
            <i
              class="icon-plus"
            />
          </button>
        </div>
        <div
          class="SidebarChannelGroup_content"
        >
          <ul
            class="NavGroupContent"
          >
            <li
              id="mock-sidebar-channel"
            />
          </ul>
        </div>
      </div>
      <div
        id="mock-invite-members-button"
      />
    </div>
  </div>
</div>
`;

exports[`components/sidebar/sidebar_category should match snapshot when the category is DM and there are no DMs to display 1`] = `
<div>
  <div
    data-rfd-droppable-context-id=":rg:"
    data-rfd-droppable-id="sidebar-categories"
  >
    <div
      class="SidebarChannelGroup a11y__section"
      data-rfd-draggable-context-id=":rg:"
      data-rfd-draggable-id="category1"
    >
      <div
        class=""
        data-rfd-droppable-context-id=":rg:"
        data-rfd-droppable-id="category1"
      >
        <div
          class="SidebarChannelGroupHeader"
        >
          <button
            aria-expanded="true"
            aria-label="DIRECT MESSAGES"
            class="SidebarChannelGroupHeader_groupButton"
          >
            <i
              class="icon icon-chevron-down hide-arrow"
            />
            <div
              aria-describedby="rfd-hidden-text-:rg:-hidden-text-:rh:"
              class="SidebarChannelGroupHeader_text"
              data-rfd-drag-handle-context-id=":rg:"
              data-rfd-drag-handle-draggable-id="category1"
              draggable="false"
              tabindex="-1"
            >
              DIRECT MESSAGES
            </div>
          </button>
          <div
            id="mock-sorting-menu"
          />
          <button
            aria-label="Write a direct message"
            class="SidebarChannelGroupHeader_addButton"
            id="newDirectMessageButton"
          >
            <i
              class="icon-plus"
            />
          </button>
        </div>
        <div
          class="SidebarChannelGroup_content"
        >
          <ul
            class="NavGroupContent"
          />
        </div>
      </div>
      <div
        id="mock-invite-members-button"
      />
    </div>
  </div>
</div>
`;

exports[`components/sidebar/sidebar_category should match snapshot when there are no channels to display 1`] = `
<div>
  <div
    data-rfd-droppable-context-id=":rn:"
    data-rfd-droppable-id="sidebar-categories"
  />
</div>
`;
